added graphql service interface to vacation request example

--- a/vacation-requests/src/main/resources/templates/approval.html
+++ b/vacation-requests/src/main/resources/templates/approval.html
@@ -161,7 +161,7 @@
                               <p>Employee email {inputs.employee.email}, employee department {inputs.employee.department}</p>      
                           </div>
                           <div class="col-md-8">   
-                              <p>You are about to cancel following vacation</p>
+                              <p>You are about to approve following vacation</p>
                               <ul>
                               	<li>Name: <b>{inputs.request.key}</b></li>
                               	<li>From: <b>{time:format(inputs.request.from,'yyyy-MM-dd')}</b></li>
